# RealTimeTranslator-backend

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  Makefile  README.md  original_commit.txt  pyproject.toml  version_info.txt
.github/workflows/: release.yml  version-bump.yml
src/: app.py
src/config/: __init__.py
src/injectors/: connections.py
src/models/: tasks.py
src/routers/: tasks.py
