[project]
name = "realtimetranslator-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "some-package>=0.1 ; sys_platform == 'linux'",
    "uvicorn[standard]>=0.37.0",
]

[tool.uv.workspace]
members = [
    "src/base_async",
    "src/base_async/src/base_module",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = ""
upload_to_pypi = false
upload_to_release = false  # отключаем создание релизов
publish = false  # отключаем публикацию
changelog_file = "CHANGELOG.md"
tag_format = "v{version}"
major_on_zero = false
commit = true  # создавать коммит с новой версией
push = true   # пушить изменения

[tool.semantic_release.branches.develop]
match = "develop"
prerelease = false

